Add more pod specs

--- a/k8s/assets/pod-with-resources.yml
+++ b/k8s/assets/pod-with-resources.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: devops
+  name: devops-with-resources
 spec:
   containers:
     - image: tfogo/devops
