--- a/devops-service/default.conf
+++ b/devops-service/default.conf
@@ -1,11 +1,16 @@
 server {
-    listen       80;
+    listen       8080;
     server_name  localhost;
 
     #charset koi8-r;
     #access_log  /var/log/nginx/host.access.log  main;
 
     location / {
+        root   /usr/share/nginx/html;
+        index  index.txt;
+    }
+
+    location /healthz {
         root   /usr/share/nginx/html;
         index  index.txt;
     }
