--- a/k8s/assets/pod.yml
+++ b/k8s/assets/pod.yml
@@ -4,9 +4,9 @@ metadata:
   name: devops
 spec:
   containers:
-    - image: tfogo/devops
+    - image: tfogo/devops:v1
       name: devops
       ports:
-        - containerPort: 80
+        - containerPort: 8080
           name: http
           protocol: TCP
