--- a/k8s/assets/deployment-v2.yml
+++ b/k8s/assets/deployment-v2.yml
@@ -3,16 +3,16 @@ kind: Deployment
 metadata:
   name: devops
   labels:
-    app: devops-app
+    app: devops
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: devops-app
+      app: devops
   template:
     metadata:
       labels:
-        app: devops-app
+        app: devops
       annotations:
         kubernetes.io/change-cause: "Update image to v2"
     spec:
