--- a/devops-service/default.conf
+++ b/devops-service/default.conf
@@ -11,8 +11,8 @@ server {
     }
 
     location /healthz {
-        root   /usr/share/nginx/html;
-        index  index.txt;
+        return 200 'ok';
+        add_header Content-Type text/plain;
     }
 
     #error_page  404              /404.html;
