--- a/k8s/assets/pod-with-labels.yml
+++ b/k8s/assets/pod-with-labels.yml
@@ -9,7 +9,7 @@ metadata:
     git-info: "commit 93c34fb33f2398cf3308bf42ad7ef0df33dc86d8 Author: Tim Fogarty <tim@tfogo.com> Date: Tue Aug 28 17:42:14 2018 -0700"
 spec:
   containers:
-    - image: tfogo/devops
+    - image: tfogo/devops:v1
       name: devops
       ports:
         - containerPort: 8080
