--- a/devops-service/default.conf
+++ b/devops-service/default.conf
@@ -11,7 +11,7 @@ server {
     }
 
     location /healthz {
-        return 200 'ok';
+        return 200 'ok\n';
         add_header Content-Type text/plain;
     }
 
